# ai-toolkit-cli

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
ai_toolkit/: main.py
ai_toolkit/commands/: chat.py  codegen.py  summarize.py
ai_toolkit/core/: client.py
frontend/: index.html
