[project]
name = "ai-toolkit-cli"
version = "1.0.5"
description = "AI Toolkit CLI powered by OpenRouter"
readme = "README.md"
license = "MIT"
authors = [{ name = "Your Name", email = "you@email.com" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.52.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
ai = "ai_toolkit.main:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ai-toolkit-cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_toolkit*"]
exclude = ["frontend*", "docs*", ".venv*"]